# runaiRCA

./: .gitignore  NOTICE  README.md  SUMMARY.md
agent/: .dockerignore  Dockerfile  README.md  pyproject.toml
agent/app/: __init__.py  bm25.py  config.py  knowledge.py  llm.py  main.py  masking.py  mcp_client.py  nat_engine.py  nat_tools.py  plan.py  progress.py  prompts.py  schemas.py
agent/configs/: runai_rca_engine.yml  runai_rca_eval.yml  runai_rca_workflow.yml  runai_rca_workflow_litellm.yml  runai_rca_workflow_mcp.yml
agent/eval/: check_nat_eval.py  check_release_gate.py  export_fixtures.py  fixtures.jsonl  fixtures_holdout.jsonl  gen_dataset.py  nat_dataset.jsonl  nat_dataset.synthetic.jsonl  novel_incident_e2e_outputs.jsonl  ood_cases.jsonl  release_gate.synthetic.fail.json  release_gate.synthetic.pass.json  run_eval.py  run_novel_incident_e2e_eval.py  run_ood_eval.py  test_release_gate.py
agent/knowledge/: failure_modes.yaml  families.yaml  k8s_troubleshooting_tree.yaml  runai_alerts_catalog.yaml  runai_architecture.yaml  runai_known_issues.yaml  troubleshooting_cases.md  xid_catalog.yaml
agent/ontology/: backfill_trace_v3.py  functions.tql  incident.py  ingest.py  load_alerts.py  load_architecture.py  load_external_cases.py  load_functions.py  load_knowledge.py  load_known_issues.py  load_schema.py  load_troubleshooting.py  load_xids.py  mirror_packages.py  query.py  schema.tql
agent/prompts/: agent_souls.md
agent/tests/: test_affected_pods.py  test_agent_roles.py  test_alert_text_signal.py  test_analysis_budget.py  test_analysis_deadline.py  (+88 more)
(+239 files in other folders)
