[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runai-rca-agent"
version = "0.1.0"
description = "Run:AI RCA NeMo Agent Toolkit service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.29,<1.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "mcp>=1.2,<2.0",  # Run:ai MCP client (runai-mcp sidecar); imported lazily in runai_mcp.py
  "nvidia-nat[langchain,mcp]>=1.8,<2.0",
  "pydantic>=2.7,<3.0",
  "pyyaml>=6,<7",
  "typedb-driver>=3.11,<3.12",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.entry-points."nat.components"]
runai_rca = "app.nat_engine"

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<10.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.6,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
